# aramco_security_opt

./: .env.example  .gitignore  README.md  pyproject.toml
report/: main.tex
results/saved_solutions/: balanced_heuristic_20251231_140535.json  balanced_heuristic_20251231_140644.json  balanced_heuristic_20251231_141257.json  conservative_heuristic_20251231_140638.json  conservative_heuristic_20251231_141251.json  future_heuristic_20251231_140651.json  future_heuristic_20251231_141304.json
results/solutions/: experiment_results.json  experiment_results.xlsx
src/: config.py  convert_figures_to_pdf.py  data_gen.py  exact_solver.py  heuristic_solver.py  large_scale_data_gen.py  main.py  solution_io.py  visualization.py
