[project]
name = "aramco-security-opt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "contextily>=1.6.2",
    "geopy>=2.4.1",
    "gurobipy>=13.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
]

