[project]
name = "aramco-security-opt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.3.0",
    "cairosvg>=2.8.2",
    "contextily>=1.6.2",
    "geopy>=2.4.1",
    "gurobipy==12.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.0",
]

